[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/units/capabilities/UnitCapabilities.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/units/settler/settler_body.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/units/capabilities/CarrierCapabilities.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/units/woodcutter/WoodcutterAI.gd" type="Script" id=4]
[ext_resource path="res://entities/units/woodcutter/woodcutter.gd" type="Script" id=5]

[node name="Woocutter" type="Position3D"]
script = ExtResource( 5 )

[node name="CarrierCapabilities" parent="." instance=ExtResource( 3 )]

[node name="UnitCapabilities" parent="." instance=ExtResource( 1 )]

[node name="KinematicBody" parent="." instance=ExtResource( 2 )]

[node name="WoodcutterAI" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="WoodcutterAI"]
wait_time = 2.0
autostart = true
[connection signal="timeout" from="WoodcutterAI/Timer" to="WoodcutterAI" method="_on_log_ready"]
